# iolite

./: .gitignore  CMakeLists.txt  README.md  build_linux.sh  build_windows.bat  toolchain_linux.cmake  toolchain_windows.cmake
engine/: CMakeLists.txt
engine/include/: iol_application.h  iol_array.h  iol_camera.h  iol_core.h  iol_debug.h  iol_definitions.h  iol_engine.h  iol_event.h  iol_event_types.h  iol_file.h  iol_graphics.h  iol_hashmap.h  iol_input.h  iol_input_definitions.h  iol_memory.h  iol_mesh.h  iol_string.h  iol_transform.h  iolite.h
engine/include/internal/: array_inl.h  core_inl.h  hashmap_inl.h  memory_internal.h
engine/src/core/: core.cpp  debug.cpp  engine.cpp  event_system.cpp  file.cpp  memory.cpp
engine/src/gameframework/: camera_flying.cpp
engine/src/graphics/: camera.cpp  graphics_base.cpp  graphics_base.h  graphics_opengl.cpp  graphics_opengl.h  mesh.cpp
engine/src/input/: input_system.cpp
engine/src/string/: string.cpp
game/: CMakeLists.txt
game/res/shader/: basic_cbuffer.glsl  basic_mvp.glsl  light_source_basic.glsl
game/src/: application.cpp  application.h  main.cpp  terrain_editor.cpp  terrain_editor.h
src/engine/include/: iol_array.h  iol_camera.h  iol_core.h  iol_definitions.h  iol_engine.h  iol_event_types.h  iol_memory.h  iol_mesh.h  iol_transform.h  iolite.h
src/engine/include/internal/: array_inl.h  core_inl.h
src/engine/src/core/: core.cpp  engine.cpp  memory.cpp  platform_internal.cpp  platform_internal.h
src/engine/src/gameframework/: camera_flying.cpp
src/engine/src/graphics/: graphics_base.cpp  graphics_opengl.cpp  mesh.cpp
src/engine/src/input/: input_system.cpp
src/engine/src/math/: transform.cpp
src/game/res/shader/: basic.glsl  basic_mvp_color.glsl  basic_mvp_texture.glsl  basic_texture.glsl  light_basic.glsl
src/game/src/: application.cpp  application.h  main.cpp
